styling improvements to meet "minimum viable" responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 but should shine through implicitly. <a class="wikipedia" href="https://en.wikipedia.org/wiki/Iceberg_Theory">[Wikipedia]</a>
             </p>
             <figure>
-                <img style="margin: 5vh 0 0 0" class="sideimg" src="cuba.jpg" alt="Hemingway and Fidel in Havana">
+                <img id="sideimg" src="cuba.jpg" alt="Hemingway and Fidel in Havana">
                 <figcaption>
                     Hemingway and Fidel Castro in Havana on May 15, 1960, 
                     just over a year before Hemingway's death. The two men sometimes went fishing together.
@@ -34,11 +34,11 @@
         <div class="sheet">
             <div>
                 <div class="pageheader">
-                    <p id="ernest">Ernest</p>
-                    <p id="yellowbox"></p>
-                    <p class="hemingway">Hemingway</p>
+                    <p id="ernest" class="testbox">Ernest</p>
+                    <p id="yellowbox" class="testbox"></p>
+                    <p class="hemingway testbox">Hemingway</p>
                 </div>
-                <div class="billingcontainer">
+                <div class="billingcontainer testbox">
                     <a id="billing1" href="https://www.goodreads.com/book/show/114240.The_Torrents_of_Spring?utm_medium=api&amp;utm_source=blog_book"><p>The Torrents of Spring</p></a>
                     <a id="billing2" href="https://www.goodreads.com/book/show/3876.The_Sun_Also_Rises?utm_medium=api&amp;utm_source=blog_book"><p>The Sun Also Rises</p></a>
                     <a id="billing3" href="https://www.goodreads.com/book/show/10799.A_Farewell_to_Arms?utm_medium=api&amp;utm_source=blog_book"><p>A Farewell to Arms</p></a>
@@ -47,14 +47,14 @@
                     <a id="billing6" href="https://www.goodreads.com/book/show/2165.The_Old_Man_and_the_Sea?utm_medium=api&amp;utm_source=blog_book"><p>The Old Man and the Sea</p></a>
                     <a id="billing7" href="https://www.goodreads.com/book/show/4631.A_Moveable_Feast?utm_medium=api&amp;utm_source=blog_book"><p>A Moveable Feast</p></a>
                 </div>
-                <a href="http://www.onlinewebfonts.com"><img style="width: 30px;"src="pen.png"></a>
-                <div id="quoteblock" on>
+                <a href="http://www.onlinewebfonts.com"><img id="penbrush" src="pen.png"></a>
+                <div id="quoteblock" class="testbox">
                 </div>
             </div>
         </div>
         <div class="rightflank">
             <figure>
-                <img class="sideimg" src="life.jpg" alt="LIFE magazine cover">
+                <img id="sideimg" src="life.jpg" alt="LIFE magazine cover">
                 <figcaption style="text-align: justify;color:#303030">a cover of LIFE, a highly circulated weekly magazine where whose pages Hemingway’s novella The Old Man and The Sea was first published.</figcaption>
             </figure>
             <p class="sidequote">
