styling improvements to meet "minimum viable" responsive

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div class="sheet">
             <div>
                 <div class="pageheader">
-                    <p id="ernest" class="testbox">Ernest</p>
-                    <p id="yellowbox" class="testbox"></p>
-                    <p class="hemingway testbox">Hemingway</p>
+                    <p id="ernest">Ernest</p>
+                    <p id="yellowbox"></p>
+                    <p class="hemingway">Hemingway</p>
                 </div>
                 <div class="billingcontainer testbox">
                     <a id="billing1" href="https://www.goodreads.com/book/show/114240.The_Torrents_of_Spring?utm_medium=api&amp;utm_source=blog_book"><p>The Torrents of Spring</p></a>
@@ -48,7 +48,7 @@
                     <a id="billing7" href="https://www.goodreads.com/book/show/4631.A_Moveable_Feast?utm_medium=api&amp;utm_source=blog_book"><p>A Moveable Feast</p></a>
                 </div>
                 <a href="http://www.onlinewebfonts.com"><img id="penbrush" src="pen.png"></a>
-                <div id="quoteblock" class="testbox">
+                <div id="quoteblock">
                 </div>
             </div>
         </div>
